# Dino

./: .babelrc  .dropbox_uploader.enc  .eslintrc.json  .gitignore  .travis.yml  CMakeLists.txt  README.md  main.js  package-lock.json  package.json  tsconfig.json  tslint.json
CMake/: AddGTest.cmake
src/action_menu/: action_menu.tsx  index.tsx
src/browser/: browser.less  browser.tsx  browser_option_menu.tsx  component_menu.tsx  index.tsx
src/component_menu/: component_icon.tsx  component_menu.less  component_menu.tsx  draggable_icon.tsx  index.tsx
src/dinatural_graphs/: dinatural.js  dinatural_diagram.less  index.js
src/latex_exporter/: .babelrc  index.tsx  petrinet.tsx  places.tsx  transitions.tsx
src/main_process/: main.js  main.tsx
src/naturality/: CMakeLists.txt
src/naturality/inc/: cospan.hpp
src/naturality/inc/naturality/: cospan.hpp  cospan_composition.hpp  cospan_equality.hpp  cospan_renaming.hpp  cospan_shared_count.hpp  cospan_substitution.hpp  cospan_to_string.hpp  cospan_unification.hpp  cospan_zip.hpp  natural_composition.hpp  natural_transformation.hpp  natural_transformation_node.hpp  natural_transformers.hpp  unify_cospan_with_type.hpp
src/naturality/interface/: CMakeLists.txt
src/naturality/interface/inc/naturality/: addon.hpp  graph_builder.hpp  natural_transformation_node.hpp
src/naturality/interface/src/: addon.cpp  graph_builder.cpp  natural_transformation_node.cpp
src/naturality/src/: cospan.cpp  cospan_composition.cpp  cospan_equality.cpp  cospan_renaming.cpp  cospan_shared_count.cpp  cospan_substitution.cpp  cospan_to_string.cpp  cospan_unification.cpp  cospan_zip.cpp  natural_composition.cpp  natural_transformation.cpp  natural_transformation_node.cpp  natural_transformers.cpp  unify_cospan_with_type.cpp
src/naturality/test/: CMakeLists.txt
src/naturality/test/inc/: composition_test.hpp
src/naturality/test/src/: composition_test.cpp
src/petri_nets/: composite_petri_component.tsx  composite_petri_form.tsx  draggable_composite_component.tsx  draggable_petri_component.tsx  edges.tsx  index.tsx  item_types.tsx  node_drag.tsx  petri_net.less  petri_net_diagram.tsx  petri_type_component.tsx  petri_type_form.tsx  place_nodes.tsx  selection.tsx  transition_nodes.tsx
src/polymorphic_types/: CMakeLists.txt
src/polymorphic_types/inc/polymorphic_types/: addon.hpp  atomic_type_reference.hpp  substitution.hpp  type_constructor.hpp  type_constructor_node.hpp  type_constructors.hpp  type_equality.hpp  type_errors.hpp  type_replacement.hpp  type_symbol_map.hpp  type_to_string.hpp  type_transformers.hpp  types.hpp  unification.hpp
src/polymorphic_types/interface/: CMakeLists.txt
src/polymorphic_types/interface/inc/polymorphic_types/: atomic_type_reference.hpp  type_constructor_node.hpp
src/polymorphic_types/interface/src/: addon.cpp  atomic_type_reference.cpp  type_constructor_node.cpp
src/polymorphic_types/src/: addon.cpp  addon_node.cpp  atomic_type_reference.cpp  substitution.cpp  type_constructor.cpp  type_constructor_node.cpp  type_constructors.cpp  type_equality.cpp  type_errors.cpp  type_replacement.cpp  type_to_string.cpp  type_transformers.cpp  unification.cpp
src/polymorphic_types/test/: CMakeLists.txt
src/polymorphic_types/test/inc/: unification_test.hpp
src/polymorphic_types/test/src/: unification_test.cpp
src/static_render/: app.tsx  index.less  index.tsx  worksheet.tsx
src/type_parsers/: CMakeLists.txt
src/type_parsers/inc/type_parsers/: cospan_ast.hpp  cospan_parser.hpp  transformation_ast.hpp  transformation_parser.hpp
src/type_parsers/src/: cospan_parser.cpp  transformation_parser.cpp
src/type_parsers/test/: CMakeLists.txt
src/type_parsers/test/inc/: CospanParserTest.hpp  TypeParserTest.hpp
src/type_parsers/test/src/: CospanParserTest.cpp  TypeParserTest.cpp  cospan_parser_test.cpp  type_parser_test.cpp
src/workspace/: worksheet-component.tsx  workspace.tsx
